spade-tests/src/snapshots/spade_tests__typeinference__comb_div_produces_number.snap
---
source: spade-tests/src/typeinference.rs
---
fn test() -> bool {
    true `std::ops::comb_div` true
}


error: Argument type mismatch. Expected Number<_> got bool
   ┌─ testinput:2:5
   │
 2 │     true `std::ops::comb_div` true
   │     ^^^^ expected Number<_>
   │
   ┌─ <compiler dir>/stdlib/ops.spade:95:20
   │
95 │ extern fn comb_div<N>(x: N, y: N) -> N;
   │                    - Type Number<_> inferred here
   │
   = note: Expected: Number<_>
                Got: bool
